Initial PDF combine support

--- a/PDFCombiner/PDFCombiner.vbproj
+++ b/PDFCombiner/PDFCombiner.vbproj
@@ -52,6 +52,9 @@
     <ApplicationIcon>Resources\Apps-Adobe-Reader.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PdfSharp">
+      <HintPath>..\..\..\..\..\..\..\Apps\PDFsharp\code\PdfSharp\bin\Release\PdfSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
